--- a/SGKE_OnlyComparison1.ipynb
+++ b/SGKE_OnlyComparison1.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyMmPULaLlC56pFnRbiZW/9w",
-      "include_colab_link": true
+      "toc_visible": true,
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -365,16 +364,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/KeerSG/Airbnb-Performace-Pridiction-using-LLM-derived-Spatial-Semantics/blob/main/SGKE_OnlyComparison1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "# Install package\n",
@@ -385,7 +374,7 @@
       "metadata": {
         "id": "jJ7SI89j6wXX"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -397,12 +386,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 842
+          "height": 1000
         },
         "id": "6At1LTKq8fmW",
         "outputId": "7bdb656d-3f7c-43b6-c035-5d9b9f285648"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -644,7 +633,7 @@
         "id": "mKc6ATGU9Pp4",
         "outputId": "55753d4e-5841-43ea-a697-48d6b0b49d27"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -670,7 +659,7 @@
         "id": "WHh1zEfIAI06",
         "outputId": "f8f3c2e2-3077-474a-ce35-81a52628ba3b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -901,7 +890,7 @@
         "id": "WGKVU27qBDoz",
         "outputId": "596259b3-a511-4676-daba-492bd260b07a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1096,12 +1085,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 179
+          "height": 229
         },
         "id": "U_yq1wCgBS3e",
         "outputId": "e5bf099d-69b1-4e27-fc62-b2bed4600851"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1279,7 +1268,7 @@
         "id": "VOyng9Y2BeSe",
         "outputId": "9771c557-52e4-434e-bcfe-2fda9bec4ea9"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1312,7 +1301,7 @@
         "id": "k1h27MH6B5hc",
         "outputId": "3736ff4c-cc60-474d-9b41-e5726d782bff"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1353,7 +1342,7 @@
         "id": "-SAZyxhwB9Ud",
         "outputId": "6b2a3fbf-212c-42d0-a3fd-4bb32c4ffa98"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1387,7 +1376,7 @@
       "metadata": {
         "id": "TMclQRzVCPHi"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1545,7 +1534,7 @@
       "metadata": {
         "id": "whVntsi_CUx9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1582,7 +1571,7 @@
         "id": "Sl4CRcIPgeuN",
         "outputId": "3183558f-7cb1-446f-b903-6b05c3bab1e1"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2934,7 +2923,7 @@
         "id": "YLxIhOpQleFd",
         "outputId": "d24183ef-ac28-45ad-cee8-a152dae932d3"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3177,7 +3166,7 @@
         "id": "5iy3pXewl29D",
         "outputId": "cfb11509-4b13-40f0-bb90-aa1001bd5582"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
